adapt Sequence